[package]
name = "partial-mpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
bytes = "1.1.0"
tokio = { version = "1.13", features = ["full"] }